# controlit_configs

./: CMakeLists.txt  README.md
atlas_legs_plain_controlit/: CMakeLists.txt  package.xml
atlas_legs_plain_controlit/launch/: atlas_legs_plain_parameters_base.xml  gazebo.launch  load_atlas_legs_plain_parameters_com.launch  load_atlas_legs_plain_parameters_jpos.launch  simulate_base.xml  simulate_com.launch  simulate_jpos.launch  start_controlit.launch
atlas_legs_plain_controlit/models/: generate_atlas_legs_plain_controlit_urdfs.sh
atlas_legs_plain_controlit/parameters/: COMPositionControl.yaml  JointPositionControl.yaml
atlas_legs_plain_controlit/worlds/: atlas_legs_plain.world
atlas_lower_controlit/: CMakeLists.txt  package.xml
atlas_lower_controlit/launch/: atlas_lower_parameters_base.xml  gazebo.launch  load_atlas_lower_parameters_com.launch  real.launch  simulate.launch  start_rapid_controller.launch
atlas_lower_controlit/parameters/: COMPositionControl.yaml
atlas_lower_controlit/worlds/: atlas_lower.world
atlas_plain_controlit/: CMakeLists.txt  package.xml
atlas_plain_controlit/launch/: atlas_plain_parameters_base.xml  gazebo.launch  load_atlas_plain_parameters_com.launch  simulate.launch  simulate_jpos.launch  start_controlit.launch
atlas_plain_controlit/models/: generate_atlas_plain_controlit_urdfs.sh
atlas_plain_controlit/parameters/: COMPositionControl.yaml  JointPositionControl.yaml
atlas_plain_controlit/scripts/: GoToReadyPose_InitialDetected.py  GoToReadyPose_InitialHardCoded.py  SendSandiaHandCloseCommand.py  SendSandiaHandOpenCommand.py
atlas_plain_controlit/worlds/: atlas_plain.world
atlas_plain_pinned_controlit/: CMakeLists.txt  package.xml
atlas_plain_pinned_controlit/launch/: gazebo.launch  load_atlas_plain_pinned_parameters.launch  simulate.launch  simulate_jpos.launch  start_controlit.launch
atlas_plain_pinned_controlit/models/: generate_atlas_plain_pinned_controlit_urdfs.sh
atlas_plain_pinned_controlit/parameters/: JointPositionControl.yaml
atlas_plain_pinned_controlit/worlds/: atlas_plain_pinned.world
controlit_configs/: CMakeLists.txt  package.xml  setup.sh
controlit_simulation_gazebo/: CMakeLists.txt  package.xml  setup.py
controlit_simulation_gazebo/scripts/: run_gazebo.sh
dreamer_controlit/: CMakeLists.txt  mainpage.dox  package.xml
dreamer_controlit/launch/: dreamer_params_base.xml  gazebo.launch  load_dreamer_parameters_cartesian_both_hands.launch  load_dreamer_parameters_cartesian_both_hands_6dof.launch  load_dreamer_parameters_jpos.launch  load_dreamer_parameters_right_hand_cartesian.launch  simulate_base.xml  simulate_cartesian_both_hands.launch  simulate_cartesian_both_hands_6dof.launch  simulate_jpos.launch  simulate_right_hand_cartesian.launch  start_controlit.launch
dreamer_controlit/models/: generate_dreamer_controlit_urdfs.sh
dreamer_controlit/parameters/: CartesianPositionAndOrientationSensors.yaml  CartesianPositionControl_BothHands.yaml  CartesianPositionControl_BothHands_6dof.yaml  JointPositionControl.yaml  RightHand6DoFCartControl.yaml  RightHandCartesianControl.yaml  RightWristCartPosSensor.yaml
dreamer_controlit/rviz/: dreamer_controlit.rviz
dreamer_controlit/scripts/: tune_plugin.sh
dreamer_controlit/src/: DreamerInteractiveMarkers.cpp  TestQuaternionTrajectory.cpp
dreamer_controlit/worlds/: dreamer_controlit.world
dreamer_controlit_common/: .gitignore  CMakeLists.txt  mainpage.dox  manifest.xml
dreamer_controlit_common/src/: QuaternionInterpolator.cpp
hume_controlit/: CMakeLists.txt  package.xml
hume_controlit/launch/: gazebo.launch  start_controller.launch
stickbot_humanoid_32dof_controlit/: CMakeLists.txt  package.xml
stickbot_humanoid_32dof_controlit/launch/: gazebo.launch  load_stickbot_humanoid_params_com.launch  load_stickbot_humanoid_params_hand_com.launch  load_stickbot_humanoid_params_jpos.launch  rviz_configure.rviz  simulate_base.xml  simulate_com.launch  simulate_hand_com.launch  simulate_jpos.launch  start_controlit.launch  stickbot_humanoid_32dof_params_base.xml
stickbot_humanoid_32dof_controlit/models/: generate_stickbot_humanoid_32dof_controlit_urdfs.sh
stickbot_humanoid_32dof_controlit/nodes/: GoToReady.py
stickbot_humanoid_32dof_controlit/parameters/: COMPositionControl.yaml  HandCOMPositionControl.yaml  JointPositionControl.yaml  RightHandCartOriSensor.yaml  RightHandCartPosSensor.yaml
stickbot_humanoid_32dof_controlit/rviz/: stickbot_humanoid_32dof.rviz
stickbot_humanoid_32dof_controlit/worlds/: stickbot_humanoid_32dof.world
stickbot_leg_6dof_controlit/: CMakeLists.txt  package.xml
stickbot_leg_6dof_controlit/launch/: gazebo.launch  load_stickbot_leg_6dof_parameters.launch  rviz_configure.rviz  simulate_jpos.launch  start_controlit.launch
stickbot_leg_6dof_controlit/models/: generate_stickbot_leg_6dof_controlit_urdfs.sh
stickbot_leg_6dof_controlit/parameters/: JointPositionControl.yaml
stickbot_leg_6dof_controlit/rviz/: stickbot_leg_6dof.rviz
stickbot_leg_6dof_controlit/worlds/: stickbot_leg_6dof.world
stickbot_lowerleg_3dof_controlit/: CMakeLists.txt  package.xml
stickbot_lowerleg_3dof_controlit/launch/: gazebo.launch  load_stickbot_lowerleg_3dof_parameters.launch  load_stickbot_lowerleg_3dof_parameters_new.launch  simulate_jpos.launch  start_controlit.launch
stickbot_lowerleg_3dof_controlit/models/: generate_stickbot_lowerleg_3dof_controlit_urdfs.sh
stickbot_lowerleg_3dof_controlit/parameters/: JointPositionControl.yaml  JointPositionControlNew.yaml
stickbot_lowerleg_3dof_controlit/rviz/: stickbot_lowerleg_3dof.rviz
stickbot_lowerleg_3dof_controlit/scripts/: SwingKneeSineWave.py
stickbot_lowerleg_3dof_controlit/worlds/: stickbot_lowerleg_3dof_controlit.world
trikey_controlit/: CMakeLists.txt  manifest.xml  package.xml
trikey_controlit/launch/: gazebo.launch  load_trikey_parameters_cartesian.launch  simulate_base.xml  (+7 more)
trikey_pinned_controlit/: CMakeLists.txt  package.xml
valkyrie_controlit/: CMakeLists.txt  package.xml
valkyrie_upperbody_controlit/: CMakeLists.txt  mainpage.dox  package.xml
(+171 files in other folders)
