<?xml version="1.0"?>
<package format="2">
    <name>atlas_legs_plain_controlit</name>
  
    <version>0.0.0</version>

    <description>
        Contains files related to the "atlas legs plain" robot.
    </description>
    
    <maintainer email="liangfok@utexas.edu">Chien-Liang Fok</maintainer>

    <author>Chien-Liang Fok</author>
    <author>Gwendolyn Johnson</author>
    <author>J.D. Yamokoski</author>
    
    <license>LGPLv2.1</license>

    <url>http://ros.org/wiki/atlas_legs_plain_controlit</url>

    <buildtool_depend>catkin</buildtool_depend>
    
    <depend>atlas_legs_plain</depend>
    <depend>controlit_gazebo_plugins</depend>
</package>


