<?xml version="1.0"?>
<package format="2">
    <name>controlit_configs</name>

    <version>0.0.0</version>

    <description>
        Contains configuration files for instantiating ControlIt! controllers.
    </description>

    <!-- One license tag required, multiple allowed, one license per tag -->
    <license>LGPLv2.1</license>

    <maintainer email="liangfok@utexas.edu">Chien-Liang Fok</maintainer>

    <author>Chien-Liang Fok</author>
    <author>Gwendolyn Johnson</author>
    <author>J.D. Yamokoski</author>

    <!-- The *_depend tags are used to specify dependencies -->
    <!-- Dependencies can be catkin packages or system dependencies -->
    <!-- Examples: -->
    <!-- Use build_depend for packages you need at compile time: -->
    <!--   <build_depend>message_generation</build_depend> -->
    <!-- Use buildtool_depend for build tool packages: -->
    <!--   <buildtool_depend>catkin</buildtool_depend> -->
    <!-- Use run_depend for packages you need at runtime: -->
    <!--   <run_depend>message_runtime</run_depend> -->
    <!-- Use test_depend for packages you need only for testing: -->
    <!--   <test_depend>gtest</test_depend> -->
    <buildtool_depend>catkin</buildtool_depend>

    <exec_depend>atlas_legs_plain_controlit</exec_depend>
    <exec_depend>atlas_lower_controlit</exec_depend>
    <exec_depend>atlas_plain_controlit</exec_depend>
    <exec_depend>atlas_plain_pinned</exec_depend>
    <exec_depend>controlit_gazebo_plugins</exec_depend>
    <exec_depend>dreamer_controlit</exec_depend>
    <exec_depend>dreamer_testbed_controlit</exec_depend>
    <exec_depend>hume_controlit</exec_depend>
    <exec_depend>stickbot_bipedal_12dof_controlit</exec_depend>
    <exec_depend>stickbot_humanoid_32dof_controlit</exec_depend>
    <exec_depend>stickbot_humanoid_32dof_pinned_controlit</exec_depend>
    <exec_depend>stickbot_leg_6dof_controlit</exec_depend>
    <exec_depend>stickbot_lowerleg_3dof_controlit</exec_depend>
    <exec_depend>stickbot_upperobody_10dof_controlit</exec_depend>
    <exec_depend>trikey_controlit</exec_depend>
    <exec_depend>trikey_pinned_controlit</exec_depend>
    <exec_depend>valkyrie_controlit</exec_depend>
    <exec_depend>valkyrie_upperbody_controlit</exec_depend>

    <!-- The export tag contains other, unspecified, tags -->
    <export>
        <!-- Other tools can request additional information be placed here -->
    </export>
</package>