<?xml version="1.0"?>
<package format="2">
    <name>stickbot_humanoid_32dof_controlit</name>
  
    <version>0.0.0</version>

    <description>
        Contains files related to the "stickbot_humanoid_32dof" robot.
    </description>
    
    <maintainer email="liangfok@utexas.edu">Chien-Liang Fok</maintainer>

    <author>Chien-Liang Fok</author>
    <author>Gwendolyn Johnson</author>
    <author>J.D. Yamokoski</author>
    
    <license>LGPLv2.1</license>

    <url>http://ros.org/wiki/stickbot_humanoid_32dof_controlit</url>

    <buildtool_depend>catkin</buildtool_depend>
    
    <!-- Uses the gazebo plugin in hcrl_simulator -->
    <depend>hcrl_simulator</depend>
</package>


