<?xml version="1.0"?>
<package format="2">
    <name>stickbot_lowerleg_3dof_controlit</name>
  
    <version>0.0.0</version>

    <description>
        Contains the ControlIt! files for stickbot_lowerleg_3dof.
    </description>

    <maintainer email="liangfok@utexas.edu">Chien-Liang Fok</maintainer>

    <author>Chien-Liang Fok</author>
    <author>Gwendolyn Johnson</author>
    <author>J.D. Yamokoski</author>
    
    <license>LGPLv2.1</license>
    
    <url>http://ros.org/wiki/stickbot_lowerleg_3dof_controlit</url>
    
    <buildtool_depend>catkin</buildtool_depend>

    <depend>controlit_gazebo_plugins</depend>
</package>


